added media queries related to bg

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 body {
   /* background:  image repeat position/size */
   background: var(--bg-url) top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -157,4 +158,15 @@ footer {
 
 footer a {
   text-decoration: none;
+}
+
+/* media-queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
