finishing switch details and animations

--- a/style.css
+++ b/style.css
@@ -77,12 +77,19 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: dark-switch-slide 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: light-switch-slide 0.4s forwards;
 }
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+  transition: 0.2s;
+}
+
 #switch spam {
   display: block;
   width: 64px;
@@ -168,5 +175,24 @@ footer a {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animations */
+@keyframes light-switch-slide {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes dark-switch-slide {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
