--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   /* background:  image repeat position/size */
   background: var(--bg-url) top center/cover;
   height: 100vh;
+  overflow: scroll;
 }
 body * {
   font-family: "Inter", sans-serif;
